# app-korner

./: package-lock.json  package.json
.github/workflows/: release-desktop.yml
Korner Hub – macOS/: README_macOS.txt
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  remote-hub.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
